[gd_scene load_steps=2 format=3 uid="uid://dtgddeolgatp0"]

[ext_resource type="Script" uid="uid://ctvn7giuucfvt" path="res://scripts/report.gd" id="2_smm52"]

[node name="Report" type="ColorRect"]
custom_minimum_size = Vector2(720, 1280)
offset_right = 720.0
offset_bottom = 1280.0
script = ExtResource("2_smm52")

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 720.0
offset_bottom = 40.0
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "KÖBÖZŐ LAP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HeaderLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 40.0
offset_right = 72.0
offset_bottom = 63.0
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="ReportLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 104.0
offset_right = 696.0
offset_bottom = 127.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 14

[node name="DateLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 1232.0
offset_right = 104.0
offset_bottom = 1255.0
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="PersonLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 472.0
offset_top = 1232.0
offset_right = 512.0
offset_bottom = 1255.0
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="Line2D" type="Line2D" parent="."]
position = Vector2(408, 1224)
points = PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 224, 0)
width = 2.0
default_color = Color(0, 0, 0, 1)
